# tp-final-robotica-movil

./: README.md
.github/workflows/: pages.yml
coppeliaSim/: tpfinal.rviz
docker_ros/: Dockerfile  start-docker.sh
docs/: build.sh  informe.md  mermaid-header.html  style.css
docs/assets/: diagramas.md  ekf_correction_geometry.excalidraw  generate_diagrams.py
docs/aux/: checklist.md  filtro_kalman.md  resumen_teorico.md  running.md  setup.md
experiments/: cinematica_inversa.ipynb  odometria_ekf.ipynb  pyproject.toml
experiments/01_cinematica_inversa/: metadata.yaml
experiments/exp_inverse_k/: exp_inverse_k_0.db3  metadata.yaml
experiments/exp_odom_ekf/: exp_odometry_0.db3  metadata.yaml
modelo_omnidireccional/: CMakeLists.txt  package.xml
modelo_omnidireccional/install/: local_setup.sh  setup.sh
modelo_omnidireccional/log/: latest_build
modelo_omnidireccional/src/: ekf_localizer.cpp  ekf_localizer.h  ekf_node.cpp  laser_detector.cpp  laser_detector.h  laser_detector_node.cpp  omni_odometry.cpp  omni_odometry.h  omni_odometry_node.cpp  trajectory_generator.cpp  trajectory_generator.h  trajectory_pilot.cpp  trajectory_pilot.h  trajectory_pilot_node.cpp  types.h
scripts/: coppeliaSim.sh  launch_terminator.sh
