<?xml version="1.0"?>
<package format="3">
  <name>modelo_omnidireccional</name>
  <version>0.0.0</version>
  <description>Modelo cinematico para robot omnidireccional Mecanum</description>
  <maintainer email="sebastian@email.com">Sebastian</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>robmovil_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>eigen3_cmake_module</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
